[package]
name = "actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
uuid = { version = "*", features = ["v4"] }
serde = { version = "*", features = ["derive"] }
aws-config = "*"
aws-sdk-dynamodb = "*"
ev-logger = "*"
log = "*"
strum_macros = "*"
strum = { version = "*", features = ["derive"] }
derive_more = "*"
